--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 html{
-  background: linear-gradient(40deg, rgb(0, 195, 255) 0%, rgb(161, 205, 255));
+  background: linear-gradient(100deg, rgb(0, 195, 255) 0%, rgb(161, 205, 255));
 }
 *{
   padding: 0;
@@ -9,8 +9,9 @@ html{
 .box{
 
   width: 100%;
-  height: 100vh;
-  max-height: 280px;
+  height: 100%;
+  margin: 10px 0px 0px 10px;
+  max-height: 290px;
   border-radius: 8px;
   background-color: rgba(255, 255, 255, 0.486);
   max-width: 600px;
@@ -21,12 +22,9 @@ html{
   display: flex;
   font-weight: 100;
 font-size: 60px;
-  justify-content: right;
+  justify-content: space-between;
 }
-.jutns{
-  display: flex;
-  justify-content: right;
-}
+
 .div-icon img{
 width: 100px;
 height: 100px;
